Fixes to the Column overlapping the left navigation bar

--- a/src/styles/task.css
+++ b/src/styles/task.css
@@ -19,13 +19,15 @@ h1 {
 
 /* Container for boxes */
 #container {
-  justify-content: center;
+  justify-content: left;
   display: flex;
   flex-direction: row;
   overflow-x: scroll;
-  width: 90%;
+  width: 65%;
   height: 8 0%;
-  margin: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 20%;
   white-space: nowrap;
 }
 
